# mzpeak_prototyping

./: .gitattributes  .gitignore  Cargo.toml  Justfile  README.md  small.chunked.mzpeak  small.mzpeak  small.numpress.mzpeak
.github/workflows/: pages.yaml  test.yaml
R/mzpeak/: .gitignore  DESCRIPTION  NAMESPACE
R/mzpeak/R/: archive.R  auxiliary_array.R  file_index.R  filters.R  mzpeak.R  tests.R
R/mzpeak/man/: mzpeak.Rd
R/mzpeak/src/: connection.c
doc/: index.md
examples/: benchmark.rs  convert.rs  convert_thermo.rs  extract.rs  extract_object_store.rs  extract_ref.rs  extract_ref_object_store.rs  peak_mass_error_check.rs  read.rs  read_chromatogram.rs  read_spectrum.rs  test_extract.rs  test_extract_ref.rs
python/: .gitignore  README.md  pyproject.toml
python/mzpeak/: __init__.py  file_index.py  filters.py  mz_reader.py  reader.py  util.py
python/scripts/: compressed_column_size.py  describe_run.py  describe_table_schema.py  make_error_plot.py  read.py
python/test/: test_filter.py  test_reader.py
schema/: array_index.json  auxiliary_array.json  file_description.json  instrument_configuration.json  ms_run.json  mzpeak_index.json  param.json  sample.json
small.unpacked.mzpeak/: chromatograms_data.mzpeak  chromatograms_data.parquet  chromatograms_metadata.mzpeak  mzpeak_index.json  spectra_data.mzpeak  spectra_data.parquet  spectra_metadata.mzpeak  spectra_metadata.parquet
src/: archive.rs  buffer_descriptors.rs  chunk_series.rs  entry.rs  filter.rs  index.rs  lib.rs  main.rs  param.rs  peak_series.rs  reader.rs  spectrum.rs  writer.rs
src/archive/: file_index.rs  mod.rs  object_store_async.rs  sync.rs
src/reader/: chunk.rs  index.rs  metadata.rs  object_store_async.rs  point.rs  utils.rs  visitor.rs
src/writer/: array_buffer.rs  base.rs  builder.rs  mini_peak.rs  split.rs  visitor.rs
test/data/: chunking_mzs.txt  sparse_large_gaps.txt  sparse_sciex.txt
