[package]
name = "mzpeak_prototyping"
version = "0.1.0"
edition = "2024"

[features]

thermo = ["mzdata/thermo"]

[dependencies]
arrow = "55.1.0"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
mzdata = { version = "0.55.0", features = ["serde", "bruker_tdf", "nalgebra", "zstd", "numpress"] }
parquet = "55.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.13.3", features = ["arrow-55"] }
mzpeaks = "1.0.9"
clap = { version = "4.5.38", features = ["derive"] }
num-traits = "0.2.19"
serde_json = "1.0.140"
serde_with = "3.12.0"
zip = "4.1.0"
bytes = "1.10.1"
nalgebra = "0.33.2"
bytemuck = "1.23.1"

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }

[profile.release]
debug = true
