[package]
name = "mzpeak_prototyping"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mzpeak_prototyping"
path = "src/main.rs"

[[example]]
name = "convert"
path = "examples/convert.rs"

[[example]]
name = "benchmark"
path = "examples/benchmark.rs"

[[example]]
name = "peak_mass_error_check"
path = "examples/peak_mass_error_check.rs"

[[example]]
name = "read_spectrum"
path = "examples/read_spectrum.rs"

[[example]]
name = "read"
path = "examples/read.rs"

[[example]]
name = "test_extract_refs"
path = "examples/test_extract_ref.rs"

[[example]]
name = "test extract"
path = "test_extract.rs"

[features]

thermo = ["mzdata/thermo"]

[dependencies]
arrow = "55.2.0"
env_logger = "0.11.8"
itertools = "0.14.0"
log = "0.4.27"
mzdata = { version = "0.56.0", features = ["serde", "bruker_tdf", "nalgebra", "zstd", "numpress"] }
parquet = "55.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrow = { version = "0.13.3", features = ["arrow-55"] }
mzpeaks = "1.0.9"
num-traits = "0.2.19"
serde_json = "1.0.140"
serde_with = "3.12.0"
zip = "4.1.0"
bytes = "1.10.1"
nalgebra = "0.33.2"
bytemuck = "1.23.1"

# For the benchmark CLI, to eventually be factored out if switching to workspace
clap = { version = "4.5.38", features = ["derive"] }
walkdir = "2.5.0"
csv = "1.3.1"
tempfile = "3.13.0"
indicatif = "0.17.10"

[dev-dependencies]
clap = { version = "4.5.38", features = ["derive"] }

[profile.release]
debug = true
